// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputSelect > props > should render type 'background' 1`] = `
<select
  background="#fff"
  class="podlove-component-select block w-full border rounded-none p-1 h-8"
  data-v-729933d8=""
>
  
  <option
    data-v-729933d8=""
  >
    foo
  </option>
  <option
    data-v-729933d8=""
  >
    bar
  </option>
  <option
    data-v-729933d8=""
  >
    baz
  </option>
  
</select>
`;

exports[`InputSelect > props > should render type 'borderColor' 1`] = `
<select
  bordercolor="#fff"
  class="podlove-component-select block w-full border rounded-none p-1 h-8"
  data-v-729933d8=""
>
  
  <option
    data-v-729933d8=""
  >
    foo
  </option>
  <option
    data-v-729933d8=""
  >
    bar
  </option>
  <option
    data-v-729933d8=""
  >
    baz
  </option>
  
</select>
`;

exports[`InputSelect > props > should render type 'color' 1`] = `
<select
  class="podlove-component-select block w-full border rounded-none p-1 h-8"
  color="#fff"
  data-v-729933d8=""
>
  
  <option
    data-v-729933d8=""
  >
    foo
  </option>
  <option
    data-v-729933d8=""
  >
    bar
  </option>
  <option
    data-v-729933d8=""
  >
    baz
  </option>
  
</select>
`;

exports[`InputSelect > props > should render type 'disabled' 1`] = `
<select
  class="podlove-component-select block w-full border rounded-none p-1 h-8"
  data-v-729933d8=""
  disabled=""
>
  
  <option
    data-v-729933d8=""
  >
    foo
  </option>
  <option
    data-v-729933d8=""
  >
    bar
  </option>
  <option
    data-v-729933d8=""
  >
    baz
  </option>
  
</select>
`;

exports[`InputSelect > props > should render type 'value' 1`] = `
<select
  class="podlove-component-select block w-full border rounded-none p-1 h-8"
  data-v-729933d8=""
>
  
  <option
    data-v-729933d8=""
  >
    foo
  </option>
  <option
    data-v-729933d8=""
  >
    bar
  </option>
  <option
    data-v-729933d8=""
  >
    baz
  </option>
  
</select>
`;

exports[`InputSelect > props > should render with default props 1`] = `
<select
  class="podlove-component-select block w-full border rounded-none p-1 h-8"
  data-v-729933d8=""
>
  
  
</select>
`;
